--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    // https://mvnrepository.com/artifact/org.apache.clerezza.ext/org.json.simple
+    implementation group: 'org.apache.clerezza.ext', name: 'org.json.simple', version: '0.4'
+
 }
 
 test {
